RESOLVED FIXED309023
[WGSL] webgpu:shader,validation,shader_io,interpolate:* is failing
https://bugs.webkit.org/show_bug.cgi?id=309023
Summary [WGSL] webgpu:shader,validation,shader_io,interpolate:* is failing
Tadeu Zagallo
Reported 2026-03-02 16:50:22 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-02 16:50:30 PST
Tadeu Zagallo
Comment 2 2026-03-02 16:58:03 PST
Tadeu Zagallo
Comment 3 2026-03-02 16:58:22 PST
EWS
Comment 4 2026-03-10 05:49:41 PDT
Committed 308968@main (b9692262ea64): <https://commits.webkit.org/308968@main> Reviewed commits have been landed. Closing PR #59754 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.