[WGSL] webgpu:shader,validation,shader_io,interpolate:* is failing https://bugs.webkit.org/show_bug.cgi?id=309023 rdar://148085740

Reviewed by Mike Wyrzykowski.

We were missing validations around which interpolation sampling are allowed for
each interpolation type, as well as missing validation for required interpolation
annotations for integer inputs and outputs.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/shader_io/interpolate-expected.txt:
* Source/WebGPU/WGSL/AST/ASTInterpolateAttribute.h:
* Source/WebGPU/WGSL/AttributeValidator.cpp:
(WGSL::AttributeValidator::validateInterpolation):
(WGSL::AttributeValidator::validateIO):
(WGSL::AttributeValidator::validateInterpolationIO):
(WGSL::AttributeValidator::validateStructIO):
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::convertToSampleMode):
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseAttribute):

Canonical link: https://commits.webkit.org/308968@main